--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,13 @@ dependencies:
   flutter_svg: 0.17.4
   flutter_map: any
   flutter_map_marker_cluster: any
+  mongo_dart: any
+  http: ^0.12.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.7.0"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -81,3 +84,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_icons:
+  ios: true
+  android: true
+  image_path_ios: "assets/icons/travel.png"
+  image_path_android: "assets/icons/travel.png"
